--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -5,3 +5,5 @@
   <input type="email" name="email" placeholder="Email:">
   <input type="submit" value="Sign Up">
 </form>
+<p></p>
+<p>Have an account already? <a href="/login">Log In</a> here!</p>
