--- a/app/views/wordcounts/show.erb
+++ b/app/views/wordcounts/show.erb
@@ -1,3 +1,4 @@
+<p><%= "#{@wordcount.month}/#{@wordcount.day}/#{@wordcount.year}" %></p>
 <p><%= "#{@wordcount.count}" %></p>
 
 <p><a href="/counts/<%=@wordcount.id%>/edit">Edit Entry</a></p>
