--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,6 @@
-<h3><%= "#{@user.username}'s Profile" %></h3>
-
+<h2><%= "#{@user.username}'s Profile" %></h2>
+<h3>Total Words: <%=@wordcounts.map { |wc| wc.count }.sum%></h3>
+<p></p>
     <% @wordcounts.each do |wcount| %>
-    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}" %><br></p>
+    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}"%> — <a href="/counts/<%=wcount.id%>/edit">Edit?</a><br></p>
     <% end %>
