--- a/app/views/wordcounts/edit.erb
+++ b/app/views/wordcounts/edit.erb
@@ -2,11 +2,11 @@
 <p><%= "#{@wordcount.count}" %></p>
 
 <form action="/counts/<%=@wordcount.id%>" method="post">
-    <input id="hidden" type="hidden" name="_method" value="PATCH"><br>
-    <label for="count">Count: </label><input type="text" id="count" name="count"><br>
-    <label for="year">Year: </label><input type="text" id="year" name="year"><br>
-    <label for="month">Month: </label><input type="text" id="month" name="month"><br>
-    <label for="day">Day: </label><input type="text" id="day" name="day">
-
+    <input id="hidden" type="hidden" name="_method" value="PATCH">
+    Count: <input type="text" name="count"><br>
+    Year: <input type="text" name="year"><br>
+    Month: <input type="text" name="month"><br>
+    Day: <input type="text" name="day">
+    <%# binding.pry%>
     <p><input type="submit" value="submit"></p>
 </form>
