--- a/app/views/wordcounts/edit.erb
+++ b/app/views/wordcounts/edit.erb
@@ -1,12 +1,16 @@
 <p><%= "#{@wordcount.month}/#{@wordcount.day}/#{@wordcount.year}" %></p>
 <p><%= "#{@wordcount.count}" %></p>
-
+    <% #binding.pry%>
 <form action="/counts/<%=@wordcount.id%>" method="post">
     <input id="hidden" type="hidden" name="_method" value="PATCH">
-    Count: <input type="text" name="count"><br>
-    Year: <input type="text" name="year"><br>
-    Month: <input type="text" name="month"><br>
-    Day: <input type="text" name="day">
-    <%# binding.pry%>
+    Count: <input type="text" id="count" name="count"><br>
+    Year: <input type="text" id="year" name="year"><br>
+    Month: <input type="text" id="month" name="month"><br>
+    Day: <input type="text" id="day" name="day">
+
     <p><input type="submit" value="submit"></p>
 </form>
+
+<form action="/counts/<%=@wordcount.id%>" method="post">
+    <input id="hidden" type="hidden" name="_method" value="DELETE">
+    <p><input type="submit" value="Delete"></p>
