--- a/app/views/wordcounts/index.erb
+++ b/app/views/wordcounts/index.erb
@@ -1,3 +1,3 @@
     <% @wordcounts.each do |wcount| %>
-    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}" %><br></p>
+    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count} — #{wcount.user.username}" %><br></p>
     <% end %>
