users must have unique names & emails

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,3 +4,5 @@
     <% @wordcounts.each do |wcount| %>
     <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}"%> — <a href="/counts/<%=wcount.id%>/edit">Edit?</a><br></p>
     <% end %>
+
+    <p><a href="/logout">Logout?</a></p>
