users can no longer view the option to edit/delete others' posts

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,8 +1,13 @@
 <h2><%= "#{@user.username}'s Profile" %></h2>
 <h3>Total Words: <%=@wordcounts.map { |wc| wc.count }.sum%></h3>
+<% if Helpers.current_user(session) == @user %>
+     <h4><a href="/counts/new">New Entry?</a></h4>
+<% end %>
 <p></p>
     <% @wordcounts.each do |wcount| %>
-    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}"%> — <a href="/counts/<%=wcount.id%>/edit">Edit?</a><br></p>
+    <p><%="#{wcount.month}/#{wcount.day}/#{wcount.year} — #{wcount.count}"%> <% if Helpers.current_user(session) == @user %>
+     — <a href="/counts/<%=wcount.id%>/edit">Edit?</a>
+        <% end %><br></p>
     <% end %>
 
     <p><a href="/logout">Logout?</a></p>
