--- a/app/views/wordcounts/edit.erb
+++ b/app/views/wordcounts/edit.erb
@@ -8,7 +8,7 @@
     Month: <input type="text" id="month" name="month"><br>
     Day: <input type="text" id="day" name="day">
 
-    <p><input type="submit" value="submit"></p>
+    <p><input type="submit" value="Edit"></p>
 </form>
 
 <form action="/counts/<%=@wordcount.id%>" method="post">
