--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,8 +2,8 @@
 
 <form action="/login" method="POST">
   <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
-  <input type="submit" value="submit">
+  <input type="password" name="password" placeholder="Password:">
+  <input type="submit" value="Submit">
 </form>
 <p> </p>
 <p>If you don't have an account yet, <a href="/signup">Sign Up!</a></p>
