--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,8 +18,12 @@
 
         <%= yield %>
 
+        <% if Helpers.logged_in?(session) %>
+             <h4><a href="/counts/new">New Entry</a> — <a href="/logout">Logout</a></h4>
+        <% end %>
+
       <footer class="branding">
-        <small>&copy; 2020 <strong>Writeupwritedown</strong></small>
+        <small>&copy; 2020 <strong>WriteUpWriteDown</strong></small>
       </footer>
     </div>
 
