--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,5 +1,6 @@
 <h3>Sign Up</h3>
 <p>Usernames and email addresses must be unique. No fields can be empty.</p>
+<p><%= flash[:error] %> </p>
 <form action="/signup" method="POST">
   <input type="text" name="username" placeholder="Username:">
   <input type="password" name="password" placeholder="Password:">
